# Olimp

./: .gitignore  README.txt  index.html
backend/: app.ts  package-lock.json  package.json
windows/: CMakeLists.txt  app.ts  binding.gyp  package-lock.json  package.json  tsconfig.json
windows/addons/: addon.cc
windows/capture/: App.cpp  App.h  SimpleCapture.cpp  SimpleCapture.h  pch.h  screen.cpp
